samples/.

Added POE-HINTS documentation.

Added POE::Curator, POE::Ojbect and POE::Runtime classes.  These
implement the start of the heretofore "Mythical" Object Layer.

Added samples/olayer.perl to test the current Object Layer features.
The object layer is in early development, so there's no documentation
outside the olayer.perl comments.

Added Philip Gwyn's serialization patch to Filter::Reference.
Added Philip Gwyn's serialization test as samples/ref-type.perl.
Updated documentation for Filter::Reference to match patch.


0.06_07 1999.05.12
------------------

"Crunch time" is sort of over.  An emergency in April put everything
on hold.  I had a lot of time away from working on POE, and I came
back refreshed and with some funky new ideas.  Unfortunately, it sort
of ruined my plans for releasing 0.07, and 0.07 is delayed until I
move development over to CVS.

&POE::Kernel::post() now returns undef for error.  The "success"
return value currently is 1, but this may change.  It's better right
now to check for definedness as success.  On error, $! will be set as
per &POE::Kernel::alias_resolve().

&POE::Kernel::call() has improved return values, similar to &post's.
See the docs.

&POE::Session::create is a new constructor, with some type checking.
It uses a completely different call signature.  See the docs.

Philip Gwyn's patches for hot-swappable filters are in.  They are
highly experimental and untested.  No guarantees, not even that
they'll exist in future releases.  Feedback would be appreciated.


0.06_06 1999.04.28
------------------

Added some defaults to SocketFactory: SocketDomain => AF_INET,
SocketType => SOCK_STREAM, SocketProtocol => 'tcp' (for INET sockets).

Changed SocketFactory semantics.  On Artur's insistence, SocketFactory
now uses RemoteAddress to determine the difference between connecting
and listening sockets.  ListenQueue now defaults to SOMAXCONN.  This
should not break existing programs.
