@@ -133,6 +133,16 @@ sub put {
 }
 
 #------------------------------------------------------------------------------
+
+sub get_pending 
+{
+    my($self)=@_;
+    warn ref($self)." does not support the get_pending() method\n";
+    return;
+}
+
+
+#------------------------------------------------------------------------------
 #function specific to HTTPD;
 #------------------------------------------------------------------------------
 
